<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="kq__all">全部</string>
    <string name="kq_submit_tip1">当前课程已经考勤过！</string>
    <string name="back_tip1">再按一次推出!</string>
    <string name="btn_delete">删除</string>
    <string name="btn_ignore">跳过</string>
    <string name="exit_tip">您确定要退出吗？</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_submit">提交</string>
    <string name="btn_sure">确定</string>
    <string name="login_progress_tip1">正在登陆...</string>
    <string name="login_progress_tip2">请等待...</string>
    <string name="login_error_tip1">用户名或密码不能为空！</string>
    <string name="login_error_tip2">登陆失败！</string>
    <string name="network_error_update_kq_tip">网络异常，提交失败！</string>
    <string name="net_submit_kq_success">提交成功！</string>
    <string name="kq_submiting">提交中...</string>
    <string name="kq_submit_title">考勤提交</string>
    <string name="net_submit_kq_nokq">没有数据需要提交！</string>
     <string name="net_submit_kq_action">NET_SUBMIT_KQ</string>
    <string name="network_error_action">NETWORK_ERROR</string>
    <string name="forclass_tip">现在不是上课时间！</string>
    <string name="tea_look_weekformat">第%1$s周</string>
    <string name="tea_kq_extra_classtime">节次：</string>
    <string name="tea_kq_extra_week">周次：</string>
    <string name="tea_kq_extra_class">班级：</string>
    <string name="tea_kq_extra_course">课程：</string>
    <string name="tea_class_all">全部</string>
    <string name="tea_kq_pic_stu_state">状态：</string>
    <string name="tea_kq_order_mode_pic">图片</string>
    <string name="tea_kq_order_mode_list">列表</string>
    <string name="tea_kq_save">提交</string>
    <string name="tea_kq_stu_class_state">上课：</string>
    <string name="tea_kq_stu_disabsence">缺勤：</string>
    <string name="tea_kq_state_innormal">缺勤</string>
    <string name="tea_kq_state_normal">正常</string>
    <string name="home_kq_order">课堂考勤</string>
    <string name="home_kq_lookback">考勤查看</string>
    <string name="home_kq_bulu">考勤补录</string>
    <string name="KQresult_submit">已提交</string>
    <string name="KQresult_notsubmit">未提交</string>
    <string name="jdtb_look_txt">查看</string>
    <string name="jdtb_not_saved">未提交的考勤</string>
    <string name="app_name">考勤系统-老师版</string>
    <string name="action_settings">Settings</string>
    <string name="LoginActivity.Button.Login">登陆</string>
    <string name="LoginActivity.EditText.UserName">   用	户	名</string>
    <string name="LoginActivity.EditText.UserPassword">   密	码</string>
    <string name="LoginActivity.CheckBox.RemPass">记住密码</string>
    <string name="LoginActivity.CheckBox.AutoLogin">自动登陆</string>
    <string name="KQ_bulu_not_allow_tip1">数据已经提交，不允许补录!</string>

</resources>