<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    <Button
        android:id="@+id/home_kq_bulu"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:layout_marginTop="-30dp"
        android:text="@string/home_kq_bulu" />

    <Button
        android:id="@+id/home_kq_lookback"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:text="@string/home_kq_lookback" />
     
      <Button
        android:id="@+id/home_kq_order"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:text="@string/home_kq_order" />

</LinearLayout>