<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/re1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/jdtb_notsaved_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jdtb_not_saved"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/re1"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="10dp" >

        <ListView
            android:id="@+id/jdtb_notsaved_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/jdtb_notsaved_sure"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:textSize="25sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/jdtb_notsaved_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/jdtb_notsaved_sure"
            android:text="@string/btn_cancel"
            android:textSize="25sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/jdtb_notsaved_submit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/jdtb_notsaved_cancel"
            android:text="@string/btn_submit"
            android:textSize="25sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/jdtb_notsaved_ignore"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:text="@string/btn_ignore"
            android:textSize="25sp" />
    </RelativeLayout>

</RelativeLayout>