<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/kq_pic_stu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="陈书万"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/kq_pic_stu_sno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="2011111112"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/kq_pic_stu_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="计科113"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rel1"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/kq_pic_stu_pic"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:background="@color/color_blue"
            android:clickable="true" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kq_pic_stu_pic"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/lable"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/tea_kq_stu_class_state"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/kq_spic_stu_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-20dp"
                android:layout_toRightOf="@+id/lable"
                android:text="@string/tea_kq_state_normal"
                android:textColor="@color/color_blue"
                android:textSize="20sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/kq_spic_stu_late"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tea_kq_state_innormal"
            android:textColor="@color/color_red"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/kq_spic_stu_left"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toLeftOf="@+id/kq_spic_stu_late"
            android:background="@drawable/kq_pic_left"
            android:clickable="true" />

        <ImageView
            android:id="@+id/kq_spic_stu_right"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/kq_spic_stu_late"
            android:background="@drawable/kq_pic_right"
            android:clickable="true" />
    </RelativeLayout>

</RelativeLayout>